[build-system]
requires = ["setuptools>=45", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "luminapy"
version = "0.1.0"
description = "The natural-language Python language — free speech + zero logs. Just tell it what you want."
readme = "README.md"
requires-python = ">=3.8"
license = {text = "MIT"}
authors = [
  {name = "Josiah", email = "josiahg402@gmail.com"}
]
keywords = ["programming-language", "natural-language", "ai", "free-speech", "privacy"]
classifiers = [
  "Programming Language :: Python :: 3",
  "License :: OSI Approved :: MIT License",
  "Operating System :: OS Independent",
]

[project.urls]
Homepage = "https://github.com/josiahg402/luminapy"
Repository = "https://github.com/josiahg402/luminapy"
